# tabula

./: .gitignore  LICENSE  README.md  data.csv  data.tsv  pyproject.toml
src/tabula/: __init__.py
src/tabula_cli/: __init__.py  models.py  plots.py  stats.py  statx_cli.py  tables.py
src/tests/: test_cli.py
tests/: __init__.py  conftest.py  test_integration.py  test_plots.py  test_stats.py  test_stats_cli.py  test_tabula.py
