[project]
name = "tabula-cli"
version = "1.0.0"
description = "Tabular manipulation on the command line"
readme = "README.md"
authors = [
    { name = "henrywatkins", email = "h.watkins@hotmail.com" }
]
license = { file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.0",
    "pandas>=2.3.1",
    "polars>=1.31.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]

[project.scripts]
tabula = "tabula_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]
